<resources>
    <string name="app_name">ProfileUI</string>

    <string name="full_name">FullName</string>
    <string name="user_name">UserName</string>

    <string name="user_online">Online</string>
    <string name="user_offline">Offline</string>

    <string name="follow_user">FOLLOW</string>

    <string name="posts_label">posts</string>
    <string name="followers_label">followers</string>
    <string name="following_label">following</string>

    <string name="no_post">User has no posts</string>
</resources>
